test/spec_vectors/simd_bit_shift/fail/module_39.wat
(module (func $i64x2.shr_u-last-arg-empty (result v128) (i64x2.shr_u (v128.const i64x2 0 0))))